Bug 476980 - Blur Effect layer and layer styles not scaling with advanced export
Summary: Blur Effect layer and layer styles not scaling with advanced export
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Resize/Scale Image/Layer (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords:
: 488448 (view as bug list)
Depends on:
Blocks:
 
Reported: 2023-11-14 09:00 UTC by Dynline
Modified: 2024-08-27 06:58 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
test .kra file (1.93 MB, application/x-krita)
2023-11-14 09:00 UTC, Dynline
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dynline 2023-11-14 09:00:00 UTC
Created attachment 163142 [details]
test .kra file

SUMMARY
***
While usign the blur effect as a layer or the drop shadow, it will not scale proportionally when saving with the option "advanced export"

***


STEPS TO REPRODUCE
I added a file with the first steps already done.

Blur layer:
1.  Make a 2048*2048 image
2 make a new layer and draw some shapes in it
3.  duplicate that layer and add a filter layer with gaussian blur at maximum to add a "glow"
4. click on advanced export 
5. scale at 256*256

drop shadow style:
1.  Make a 2048*2048 image
2. make a new layer and draw some shapes in it
3.  add a visible drop shadow effect, I used "normal" with max opacity and max size
4. click on advanced export 
5. scale at 256*256


OBSERVED RESULT
the product image will have a much wider "glow"

EXPECTED RESULT
the new image should be a tinier version of the one you save from, with the same look

SOFTWARE/OS VERSIONS
Windows 10

ADDITIONAL INFORMATION
This problem is similar to https://bugs.kde.org/show_bug.cgi?id=470110 but might not be related.
Comment 1 tomtomtomreportingin 2023-11-15 04:55:04 UTC
I've also come across this issue. I would expect Advanced Export to export a flattened copy.
Comment 2 Freya Lupen 2024-08-19 19:45:16 UTC
*** Bug 488448 has been marked as a duplicate of this bug. ***
Comment 3 Dmitry Kazakov 2024-08-23 13:21:54 UTC
Git commit 9c5277ffe06bc8899c3b19499b90944869482719 by Dmitry Kazakov.
Committed on 23/08/2024 at 13:21.
Pushed by dkazakov into branch 'master'.

Fix Advanced Export of the image with filter masks or layer styles

Basically, the image if flattened before export in the following cases:

1) The export format does not support layers (a general warning appears)
2) The image contains a filter mask or layer (a warning appears that the image
    is going to be flattened before export)
3) The image contains a layer style (a warning appears that the image
    is going to be flattened before export)

M  +42   -0    libs/ui/KisImportExportManager.cpp
M  +1    -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/9c5277ffe06bc8899c3b19499b90944869482719
Comment 4 Dmitry Kazakov 2024-08-27 06:58:19 UTC
Git commit 4b38ddfbaa7378e527809494a3902c6a6b98e41e by Dmitry Kazakov.
Committed on 27/08/2024 at 06:57.
Pushed by dkazakov into branch 'krita/5.2'.

Fix Advanced Export of the image with filter masks or layer styles

Basically, the image if flattened before export in the following cases:

1) The export format does not support layers (a general warning appears)
2) The image contains a filter mask or layer (a warning appears that the image
    is going to be flattened before export)
3) The image contains a layer style (a warning appears that the image
    is going to be flattened before export)

M  +42   -0    libs/ui/KisImportExportManager.cpp
M  +1    -1    libs/ui/KisMainWindow.cpp

https://invent.kde.org/graphics/krita/-/commit/4b38ddfbaa7378e527809494a3902c6a6b98e41e