Fix Advanced Export of the image with filter masks or layer styles

Basically, the image if flattened before export in the following cases:

1) The export format does not support layers (a general warning appears)
2) The image contains a filter mask or layer (a warning appears that the image
    is going to be flattened before export)
3) The image contains a layer style (a warning appears that the image
    is going to be flattened before export)

BUG:476980