libs/ui/KisMainWindow.cpp
@@ -1430,7 +1430,7 @@ bool KisMainWindow::saveDocument(KisDocument *document, bool saveas, bool isExpo
                     }
                 }
                 else { // Export
-                    ret = document->exportDocument(newFilePath, outputFormat, isAdvancedExporting);
+                    ret = document->exportDocument(newFilePath, outputFormat, isAdvancedExporting, true);
                     if (ret) {
                         d->lastExportLocation = newFilePath;
                         d->lastExportedFormat = outputFormat;
